--- a/Homework5.tex
+++ b/Homework5.tex
@@ -224,7 +224,8 @@ OS-SELECT(x, i)
          i = i - r
 \end{verbatim}
 
-with the initial call being OS-SELECT(T.root, i).
+with the initial call being OS-SELECT(T.root, i). \\ 
+Note that the key change here that causes this function to differ from its recursive counterpart, is that when we meet one of the three conditions (the third being the 'else' clause) we do a reassignment instead of a function call.  If we think about it, a recursive function call is sort of a re-assignment, except we are changing the value of the parameters in the top of a new function call.  Here we are changing the parameters while inside the same call.
 
 
 
@@ -326,9 +327,9 @@ Show how to use an order-statistic tree to count the number of inversions (see p
 Problem 2-4 states: \\
 Let $A[1..n]$ be an array of $n$ distinct numbers. If $i < j$ and $A[i] > A[j]$, then the pair $(i,j)$ is called an inversion of A. \\ \\
 
-To count the total number of inversion for an array is simple.  For each $j$, count the number of elements greater than $A[j]$ that precede it.  Do this for all $j \in 1..n$, and that is the total number of inversions.  Note that by using an order-statistic tree, we can easily obtain the rank of any element $A[j]$, essentially "sorting" it.  Note also that if an element preceding $j$ is less than $j$, then it is not an inversion. That is, the rank of $j$ is its index minus the number of inversions. $rank(j) = NumInversion(j) - j$. \\
+To count the total number of inversion for an array is simple.  For each $j$, count the number of elements greater than $A[j]$ that precede it.  Do this for all $j \in 1..n$, and that is the total number of inversions.  Note that by using an order-statistic tree, we can easily obtain the rank of any element $A[j]$, essentially "sorting" it.  Note also that if an element preceding $j$ is less than $j$, then it is not an inversion. That is, the rank of $j$ is its index minus the number of inversions. $rank(j) = j - NumInversion(j)$. \\
 
-If we re-arrange this equation, we can get $NumInversion(j) = rank(j) + j$. That is, by inserting $j$ into the tree, we can then find its rank. then we can add the index of $j$ to the rank, and calculate the number of inversions. Note that both insertion and rank calculation take $\mathcal{O}(\lg n)$ time each. since we have to do this for $n$ elements (from the array), then to calculate the total number of inversions using an order-statistic tree, it will take  $\mathcal{O}(n \lg n)$ time.
+If we re-arrange this equation, we can get $NumInversion(j) = j - rank(j)$. So, by inserting $j$ into the tree, we can find its rank. then we can subtract the rank from $j$, and calculate the number of inversions. Note that both insertion and rank calculation take $\mathcal{O}(\lg n)$ time each. since we have to do this for $n$ elements (from the array), then to calculate the total number of inversions using an order-statistic tree, it will take  $\mathcal{O}(n \lg n)$ time.
 
 
 
