--- a/Homework8.tex
+++ b/Homework8.tex
@@ -158,22 +158,109 @@ DFS-VISIT(G, u)
 Modify the pseudocode for depth-first search so that it prints out every edge in the directed graph $G$, together with its type. Show what modifications, if any, you need to make if $G$ is undirected. \\
 \noindent\rule{2cm}{0.4pt} \\
 
+An imporant distinction that will help us determine the type of edge hooks on the color of a node during its transition from discovery to finish.  It is worth noting that a vertex $u$ is WHITE before time $u.d$, GRAY between $u.d$ and $u.f$, and BLACK thereafter.  This means that if we encounter a WHITE node, it has yet to be discovered, and is therefore a tree edge.  In addition, the book states that back edges are GRAY, and either forward or cross-edges are BLACK.  \\
 
+Also from the book, given two BLACK vertices $u$, $v$, and edge $(u,v)$, this edge is a forward edge if $u.d < v.d$ and cross edge if $u.d > v.d$.  With this information, we can construct our algorithm
 
+\begin{lstlisting}[language=java]
+DFS(G)
+   for each vertex u in G.V
+      u.color = WHITE
+      u.pi = NIL
+   time = 0
+   for each vertex u in G.V
+      if u.color == WHITE
+         DFS-PRINT(G,u)
+
+DFS-PRINT(G, u)
+   time = time + 1
+   u.d = time
+   u.color = GRAY
+   for each v in G.Adj[u]
+      if v.color == WHITE
+         print("Tree Edge")
+         v.pi = u
+         DFS-PRINT(G, u)
+      else if v.color == GRAY
+         print("Back Edge")
+      
+      // Edge must be black
+      else if u.d < v.d
+         print("Forward edge")
+      else
+         print("Cross edge")
+   u.color = BLACK
+   time = time + 1
+   u.f = time
+// end
+\end{lstlisting}
+
+\newpage
+If the graph is undirected, then any node can access any node where there is an edge. Fromt Theorem 22.10, In a depth-first search of an undirected graph, every edge is either a tree edge or a back edge.  Thus the second two cases in my pseudocode will simply never be executed, and they can be removed for simplicity, or left for generality.
 
 \section{Question 22.3-12} 
-Show that we can use a depth-first search of an undirected graph $G$ to identify the connected components of $G$, and that the depth-first forest contains as many trees as $G$ has connected components.  More precisely, show how to modify depth-first search so that it assigns to each vertex $v$ an integer label $v.cc$ between $1$ and $k$, where $k$ isi the number of connected components of $G$, such that $u.cc = v.cc$ if and only if $u$ and $v$ are in the same connected component. \\
+Show that we can use a depth-first search of an undirected graph $G$ to identify the connected components of $G$, and that the depth-first forest contains as many trees as $G$ has connected components.  More precisely, show how to modify depth-first search so that it assigns to each vertex $v$ an integer label $v.cc$ between $1$ and $k$, where $k$ is the number of connected components of $G$, such that $u.cc = v.cc$ if and only if $u$ and $v$ are in the same connected component. \\
 \noindent\rule{2cm}{0.4pt} \\
 
+Suppose we have an undirected graph $G$ and a vertex $v \in G$, with $k$ edges connected to other vertices.  Then each vertex connected to $v$ is a root of a subtree in the depth-first forest.  Thus for each root connected to $v$ will have a value $1...k$, and for some root $i$, all vertices connected will also share that value.  The pseudocode for this is shown below:
 
+\begin{lstlisting}[language=java]
+CC-DFS(G)
+   for each vertex u in G.V
+      u.color = WHITE
+      u.pi = NIL
+   time = 0
+   k = 1   // Initial k = 1
+   for each vertex u in G.V
+      if u.color == WHITE
+         u.cc = k
+         k = k + 1
+         CC-DFS-VISIT(G, u)
 
+CC-DFS-VISIT(G, u)
+   time = time + 1
+   u.d = time
+   u.color = GRAY
+   for each v in G.Adj[u]
+      v.cc = u.cc
+      if v.color == WHITE
+         v.pi = u
+         CC-DFS-VISIT(G, v)
+   u.color = BLACK
+   time = time + 1
+   u.f = time
+//end
+\end{lstlisting}
 
+\newpage
 \section{Question 24.1-3} 
 Given a weighted, directed graph $G = (V, E)$ with no negative-weight cycles, let $m$ be the maximum over all the vertices $v \in V$ of the minimum  number of edges in a shortest path from the source $s$ to $v$.  (Here, the shortest path is by weight, not the number of edges). Suggest a simple change to the Bellman-Ford algorithm that allows it to terminate in $m + 1$ passes, even if $m$ is not known in advance. \\
 \noindent\rule{2cm}{0.4pt} \\
 
+Note that due to the convergence property, if the path between two vertices $u$ and $v$ is equal to $\delta(u,v)$, then relaxing all edges between the two vertices will result in their path still being $\delta(u,v)$. That is, it will not change.  We can exploit this property in our code by checking after each iteration to see if the path changes.  This is where the $+ 1$ comes into our run time.  Although it will only take $m$ passes to compute the shortest path, we will need to try again and verify that there is no change.  Thus it will take $m+1$ iterations. \\
 
+We can achieve this by using a sentinel flag, initializing it to TRUE, and using it as a control in a while loop.  We modify our RELAX() method to return TRUE or FALSE if it can find a path shorter than the current one.  The pseudocode containing the modified BELLMAN-FORD() and RELAX() methods is shown below:
 
+\begin{lstlisting}[language=java]
+BELLMAN-FORD(G, w, s)
+   flag = TRUE // Flag set to check if the shortest path has changed
+   INITIALIZE-SINGLE-SOURCE(G, s)
+
+   while flag == TRUE
+      flag = FALSE
+      for each edge (u,v) in G.E
+         flag = RELAX(u, v, w)
+
+RELAX(u, v, w)
+   if v.d > u.d + w(u, v)
+      v.d = u.d + w(u, v)
+      v.pi = u
+      return TRUE
+   return FALSE
+// end
+\end{lstlisting}
+
+Observe that we can omit the TRUE/FALSE return values from the BELLMAN-FORD algorithm, as we are given a graph with no negative-weight cycles.
 
 \end{document}
 
